<resources>
    <string name="app_name">PayWatch</string>

    <!--Initial expense categories-->
    <string name="init_exp_cat1">Bills</string>
    <string name="init_exp_cat2">Food</string>
    <string name="init_exp_cat3">Entertainment</string>
    <string name="init_exp_cat4">Travel</string>
    <string name="init_exp_cat5">Transportation</string>
    <string name="init_exp_cat6">Hobbies</string>
    <string name="init_exp_cat7">Gifts</string>
    <string name="init_exp_cat8">Clothing</string>
    <string name="init_exp_cat9">Other</string>
    <!--Initial income categories-->
    <string name="init_inc_cat1">Extra</string>
    <string name="init_inc_cat2">Business</string>
    <string name="init_inc_cat3">Gifts</string>
    <string name="init_inc_cat4">Salary</string>
    <string name="init_inc_cat5">Loan</string>
    <string name="init_inc_cat6">Other</string>
    <!--Initial account names-->
    <string name="init_acc1">Wallet</string>
    <string name="init_acc2">Bank Account</string>

    <!--Main activity-->
    <string name="menu_overview">Overview</string>
    <string name="menu_add">Add</string>
    <string name="menu_settings">Settings</string>
    <string name="dialog_ok_warning_title">Warning</string>
    <string name="dialog_ok_incorrect_date">Incorrect date.</string>
    <string name="dialog_ok_incorrect_value">Incorrect value.</string>
    <string name="dialog_ok_select_category">No category selected.</string>
    <string name="dialog_ok_account_not_selected">Account not selected.</string>

    <!--Navigation drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Navigation menu-->
    <string name="navigation_subtitle">Operations</string>
    <string name="navigation_add_account">Add account</string>
    <string name="navigation_transfer">Transfer</string>

    <!--Fragment ADD-->
    <string name="f_add_btn_ok">OK</string>
    <string name="f_add_btn_ok_close">OK \u0026 Close</string>
    <string name="f_add_expense">Expense</string>
    <string name="f_add_income">Income</string>
    <string name="f_add_edit_value_def">0.00</string>
    <string name="f_add_toast_entry_added">Entry added</string>
    <string name="f_add_note">Optional note</string>
    <string name="f_add_date_today">Today</string>

    <!--Accounts-->
    <string name="hamburger_acc_label_main">Account balance</string>
    <string name="hamburger_acc_label_sub">Currency</string>
    <string name="acc_dialog_title">Account name</string>
    <string name="acc_currency_dialog_title">Currency</string>
    <string name="acc_budget_dialog_title">Budget</string>
    <string name="acc_dialog_btn_ok">OK</string>
    <string name="acc_dialog_btn_cancel">Cancel</string>
    <string name="acc_added">Account added</string>

    <!--Settings, Account-->
    <string name="sett_acc_title">Account</string>
    <string name="sett_acc_name">Name:</string>
    <string name="sett_acc_currency">Currency:</string>
    <string name="sett_acc_budget">Budget:</string>
    <string name="sett_acc_color">Color:</string>
    <string name="sett_acc_remove_btn">Remove account</string>
    <string name="sett_acc_remove_confirmation">All the data from this account will be removed. Do you want to continue?</string>
    <string name="sett_acc_remove_not_allowed">Account can not be removed. There must be always at least one account.</string>
    <string name="sett_cat_title">Categories</string>
    <string name="sett_cat_expense">Expense categories</string>
    <string name="sett_cat_income">Income categories</string>

    <!--Categories activity-->
    <string name="activity_categories">Categories</string>
    <string name="add_category">Add category</string>
    <string name="remove_category">Remove category</string>

    <!--Category detail activity-->
    <string name="activity_category_detail">Category</string>
    <string name="save_category">Save category</string>
    <string name="category_name">Category name</string>
    <string name="cat_remove_confirmation">All the data from this category will be recategorized to the "Other" category. Do you want to continue?</string>
    <string name="dialog_ok_other_category">You can not remove the "Other" category.</string>

    <!--Activity transfer-->
    <string name="transfer_from">From account</string>
    <string name="transfer_to">To account</string>
    <string name="transfer_amount">Amount</string>
    <string name="transfer_btn_transfer">Transfer</string>
    <string name="note_transfer">Transfer</string>
    <string name="toast_transfer">Money transfered</string>

    <!--Date picker-->
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <!-- Overview Labels -->
    <string name="budget_spent">Spent</string>
    <string name="budget_rest">Rest</string>
    <string name="bar_chart_reality">Reality</string>
    <string name="bar_chart_average">Average</string>
    <string name="line_chart_balance">Account balance</string>
    <string name="line_chart_prediction">Prediction</string>
    <string name="budget_spending">Budget spending</string>
    <string name="categories_overview">Categories overview</string>
    <string name="category_ratio">Category ratio</string>
    <string name="balance_development">Balance development</string>
    <string name="inserted_items">Inserted items</string>
    <string name="month_difference">Month balance</string>
    <string name="total_income">Total income</string>
    <string name="total_expense">Total expense</string>
    <string name="actual_balance">Actual balance</string>
    <string name="predicted_balance">Predicted balance</string>

</resources>
