<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cz.muni.fi.paywatch.fragments.SettingsFragment"
    android:id="@+id/fragment_settings">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sett_acc_title"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@drawable/text_view_sett_label"/>

        <GridLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:orientation="horizontal"
            android:rowCount="3">

            <TextView
                android:layout_columnSpan="1"
                android:layout_gravity="fill"
                android:layout_rowSpan="1"
                android:text="@string/sett_acc_name"
                android:background="@drawable/text_view_sett_sublabel"/>

            <TextView
                android:layout_columnSpan="1"
                android:layout_gravity="fill_horizontal"
                android:id="@+id/acc_name"
                android:clickable="true"
                android:background="@drawable/clickable_label"/>

            <TextView
                android:layout_columnSpan="1"
                android:layout_gravity="fill"
                android:layout_rowSpan="1"
                android:text="@string/sett_acc_currency"
                android:background="@drawable/text_view_sett_sublabel"/>

            <TextView
                android:layout_columnSpan="1"
                android:layout_gravity="fill_horizontal"
                android:id="@+id/acc_currency"
                android:clickable="true"
                android:background="@drawable/clickable_label"/>

            <TextView
                android:layout_columnSpan="1"
                android:layout_gravity="fill"
                android:layout_rowSpan="1"
                android:text="@string/sett_acc_color"
                android:background="@drawable/text_view_sett_sublabel"/>

            <TextView
                android:layout_columnSpan="1"
                android:layout_gravity="fill_horizontal"
                android:id="@+id/acc_color"
                android:text=""
                android:background="@drawable/rounded_edittext"/>

            <Button
                android:layout_columnSpan="2"
                android:layout_gravity="fill_horizontal"
                android:id="@+id/acc_remove_btn"
                android:text="@string/sett_acc_remove_btn"/>
        </GridLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sett_cat_title"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@drawable/text_view_sett_label"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sett_cat_expense"
            android:id="@+id/sett_cat_expense"
            android:background="@drawable/clickable_label"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sett_cat_income"
            android:id="@+id/sett_cat_income"
            android:background="@drawable/clickable_label"/>

    </LinearLayout>

</FrameLayout>
