<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="Import" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Slideshow" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools" />
    </group>

    <item android:title="@string/navigation_subtitle">
        <menu>
            <item
                android:id="@+id/nav_add_account"
                android:icon="@drawable/ic_add_black_24dp"
                android:title="@string/navigation_add_account" />
            <item
                android:id="@+id/nav_transfer"
                android:icon="@drawable/ic_swap_horiz_black_24dp"
                android:title="@string/navigation_transfer" />
        </menu>
    </item>

</menu>
