<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cz.muni.fi.paywatch.fragments.AddSubFragment"
    android:id="@+id/fragment_add_sub">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:orientation="horizontal">

            <EditText
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_value"
                android:text="@string/f_add_edit_value_def"
                android:textSize="28sp"
                android:gravity="right"
                android:clickable="true"
                android:inputType="numberDecimal"
                android:imeOptions="actionDone"
                android:focusableInTouchMode="true"/>

            <EditText
                android:layout_weight="1"
                android:layout_width="140dp"
                android:textSize="28sp"
                android:layout_height="wrap_content"
                android:textIsSelectable="false"
                android:clickable="false"
                android:focusable="false"
                android:enabled="false"
                android:id="@+id/edit_currency"/>

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_categories"
            android:scrollbars="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fadeScrollbars="false"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:clickable="true"
            android:textIsSelectable="false"
            android:textSize="28sp"
            android:focusable="false"
            android:id="@+id/edit_date"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/f_add_note"
            android:id="@+id/edit_note"/>

        <LinearLayout
            android:id="@+id/layout_btn"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:orientation="horizontal">

            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/btn_ok"
                android:text="@string/f_add_btn_ok"/>

            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/btn_ok_close"
                android:text="@string/f_add_btn_ok_close"/>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
